# cros-ec-battery

./: .eslintrc  .gitignore  .gitmodules  cros-ec-battery-health-saver.service  cspell.json  eslint-tsconfig.json  index.ts  install.sh  package-lock.json  package.json  remove.sh  tsconfig.json
auto-stop-charging/: Cargo.toml  auto-stop-charging.service
auto-stop-charging/src/: is_plugged_in.rs  main.rs  rtc.rs
chromebook-smart-charge/: Cargo.toml  charge_settings.toml
chromebook-smart-charge/src/: ectool.rs  find_lowest_current_above.rs  main.rs
chromebook-smart-charge/src/ectool/: battery.rs  charge_control.rs  charge_current_limit.rs  hello.rs
ectool/: Cargo.toml
ectool/src/: battery.rs  charge_control.rs  charge_current_limit.rs  lib.rs
scheduled-charge/: Cargo.toml  flake.nix
scheduled-charge/src/: main.rs
src/: index.ts
src/browser/: App.tsx  Ws.tsx  index.html  index.tsx  webpack.config.ts
