[package]
name = "auto-stop-charging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.8"
ectool = { version = "0.1.0", path = "../ectool" }
tokio = { version = "1.35.1", features = ["full"] }
