[package]
name = "chromebook-smart-charge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.8.1"
chrono = "0.4.31"
futures = "0.3.28"
humantime = "2.1.0"
ms-converter = "1.4.0"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"
