[package]
name = "scheduled-charge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
zbus = "4.4.0"
zbus_systemd = { version = "0.25600.0", features = ["login1"] }
crosec = { path = "./crosec-rs/crosec" }
starship-battery = "0.10.0"
clap = { version = "4.5.19", features = ["derive"] }
try-again = "0.1.1"

